# sof_4_25

./: rnic802e_top.sof  rnic802e_top_400.sof  rnic802e_top_500.sof  stp1.stp  stp_500.stp  stp_credit.stp  stp_rtile.stp  test_pci.py
demotest/: iic_reg_rw
demotest/p0_software_fixed/: Makefile  load.sh  readme  readme.txt  sensor  test_op_txrx.sh  test_perf.sh  tx_rx_test.sh  tx_rx_test_file.sh
demotest/p0_software_fixed/dpdk/Licenses/: license_bsd.txt
demotest/p0_software_fixed/dpdk/dpdk/app/test-pmd/: Makefile  ifc_mcdma_testpmd.c  ifc_mcdma_testpmd.h  testpmd.c  testpmd.h
demotest/p0_software_fixed/dpdk/dpdk/drivers/net/mcdma/: Makefile  mcdma.h  mcdma_common.c  mcdma_dca.c  mcdma_dca.h  mcdma_debug.c  mcdma_debug.h  mcdma_devops.c  mcdma_ethdev.c  mcdma_mailbox.c  mcdma_mailbox.h  mcdma_platform.c  mcdma_platform.h  mcdma_rxtx.c  meson.build  rte_pmd_mcdma.h  rte_pmd_mcdma_version.map  version.map
demotest/p0_software_fixed/dpdk/dpdk/drivers/net/mcdma/base/: dynamic_channel_params.h  mcdma_access.c  mcdma_access.h  pio_reg_registers.h  qdma_regs_2_registers.h
demotest/p0_software_fixed/dpdk/dpdk/examples/mcdma-test/perfq/: Makefile  README  ifc_qdma_utils.c  ifc_qdma_utils.h  mcdma_mailbox.h  meson.build  perfq_app.c  perfq_app.h  perfq_bas.c  perfq_random.c  perfq_random.h  perfq_stat.c  perfq_threads.c  rand.conf
demotest/p0_software_fixed/dpdk/dpdk/kernel/linux/igb_uio/: Makefile  igb_uio.c  meson.build
demotest/p0_software_fixed/dpdk/dpdk/patches/v20.05-rc1/: 0001-mcdma-DPDK-MCDMA-Build-integration-patch.patch  0002-mcdma-DPDK-devbind-script-patches-to-bind-MCDMA-devi.patch  0003-mcdma-dpdk-msix-patch-to-igb_uio-patch  0004-mcdma-DPDK-1MB-support.patch  0005-mcdma-Patch-to-enable-SRIOV-with-igb_uio-driver-patch  (+3 more)
demotest/p0_software_fixed/kernel/: Makefile
demotest/p0_software_fixed/kernel/common/include/: ifc_mcdma.h  ifc_mcdma_utils.h
demotest/p0_software_fixed/kernel/common/mk/: common.mk  env.mk
demotest/p0_software_fixed/kernel/common/src/: ifc_mcdma_utils.c
demotest/p0_software_fixed/kernel/driver/kmod/: Makefile
demotest/p0_software_fixed/user/: Makefile  readme
demotest/p0_software_fixed/user/cli/: Makefile
demotest/p0_software_fixed/user/cli/devmem/: Makefile  devmem.c  devmem.h
demotest/p0_software_fixed/user/cli/netdev_app/: Makefile  netdev_app.c  netdev_app.h
demotest/p0_software_fixed/user/cli/perfq_app/: Makefile  README  perfq_app.c  perfq_app.h  perfq_bas.c  perfq_stat.c  perfq_threads.c
demotest/p0_software_fixed/user/cli/sample/: Makefile  avmm.c  avmm_rx.c  avmm_tx.c  ref.c
demotest/p0_software_fixed/user/cli/simple_app/: Makefile  sapp.c
demotest/p0_software_fixed/user/common/include/: ifc_libmcmem.h  ifc_libmqdma.h  ifc_mcdma.h  ifc_qdma_utils.h  ifc_reglib_osdep.h  ifc_status.h  mcdma_ip_params.h
demotest/p0_software_fixed/user/common/mk/: common.mk  env.mk
demotest/p0_software_fixed/user/common/src/: ifc_qdma_utils.c  ifc_qdma_utils.d
demotest/p0_software_fixed/user/libmcmem/: Makefile  ifc_mcdma_mem.c  ifc_mcdma_mem.h
demotest/p0_software_fixed/user/libmqdma/: Makefile  ifc_env.c  ifc_env.h  ifc_env_config.h  ifc_mcdma.c  ifc_mcdma_config.h  ifc_mcdma_debug.c  ifc_mcdma_debug.h  ifc_mqdma.h  ifc_vfio.c  ifc_vfio.h
(+34 files in other folders)
